fixing overlap

--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ form {
 	color: #ffffff;
 }*/
 
+.row {
+	width: 90%;
+}
 
 .panel {
 	width: 90%;
